syntax = "proto3";

package protos.updatnickname;
option go_package = "protos";


service UpdateNickname {
    rpc nickname (UpdateNicknameRequest) returns (UpdateNicknameResponse);
}


message UpdateNicknameRequest {
    string userId = 1;
    string sessionId = 2;
    string nickname = 3;
    string device = 4;
}

message UpdateNicknameResponse {
    string message = 1;//状态消息
    int32 code = 2;//状态码
    int32 status = 3;// 请求状态 0失败，1成功
}